deploy yamls/basic_service_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw3-app
  labels:
    app: hw3-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hw3-app
  template:
    metadata:
      labels:
        app: hw3-app
    spec:
      containers:
        - name: app
          image: comrademaper/zis_otus_microservice_hw2:latest 
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health/
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health/
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
