deploy yamls/basic_service_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw3-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          # Rewrite требует совать регулярки везде, поэтому...
          - path: /()(.*) 
            pathType: ImplementationSpecific
            backend:
              service:
                name: hw3-service
                port:
                  number: 80
          # Правило для otusapp с rewrite
          - path: /otusapp/([^/]+)/(.*)  
            pathType: ImplementationSpecific
            backend:
              service:
                name: hw3-service
                port:
                  number: 80
